Fix contrast and active states

--- a/web/html/src/branding/css/base/theme.less
+++ b/web/html/src/branding/css/base/theme.less
@@ -356,11 +356,15 @@ header, nav.navbar-pf {
       border-style: solid;
       border-radius: 0;
       border-width: 0 0 1px 0;
-      // TODO: Update this to dark
-      color: @eos-bc-gray-900;
       padding-right: 3em;
       height: 3em;
+      color: @eos-bc-gray-1000;
+
+      &::placeholder {
+        color: @eos-bc-gray-900;
+      }
     }
+
     input:focus {
       box-shadow: none;
     }
