--- a/web/html/src/branding/css/susemanager/components/tables.less
+++ b/web/html/src/branding/css/susemanager/components/tables.less
@@ -1,7 +1,7 @@
 .spacewalk-list-head-addons {
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  align-items: flex-start;
 
   label {
     cursor: pointer;
@@ -26,6 +26,7 @@ thead tr {
   .btn-link {
     padding: 0 !important;
     border-width: 0 !important;
+    color: @eos-bc-gray-1000 !important;
   }
 }
 
